--- a/script/install
+++ b/script/install
@@ -6,8 +6,8 @@ set -e
 
 cd "$(dirname $0)"/..
 
-# Run Homebrew through the Brewfile
+# Run Homebrew through the Brewfile.
 brew bundle
 
-# find the installers and run them iteratively
+# Find and run the installers.
 find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
